--- a/.env
+++ b/.env
@@ -1,1 +1,9 @@
 SKIP_PREFLIGHT_CHECK = true
+API_KEY = AIzaSyCWng8lpwKbKitObOaKEym6LpzztTDLTnw
+AUTH_DOMAIN = teadragon-movie.firebaseapp.com
+DATA_BASE_URL = https://teadragon-movie.firebaseio.com
+PROJECT_ID = teadragon-movie
+STORAGE_BUCKET = teadragon-movie.appspot.com
+MESSAGING_SENDER_ID = 118712417527
+APP_ID = 1:118712417527:web:7bc34c7a561d90a11567f2
+MEASUREMENTID = G-MN1CDHJJ3J
