--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
+    "socket.io-client": "^4.4.0",
     "sweetalert2": "^9.3.16",
     "sweetalert2-react-content": "^2.0.2"
   },
